--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,9 @@ h1{
     padding-top: 8rem;
 }
 
+
+@media only screen and (max-width: 390px) {
+    .left_content {
+     display: none;
+    }
+  }
