--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+
+
+
 .left_content{
     /* padding-top: 10rem; */
     padding-bottom: 5rem;
@@ -22,13 +25,13 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 2rem;
+    margin-left: 10rem;
 }
 
 .header_input{
 
     margin-bottom: 1rem;
-   margin-left: 75rem;
+   margin-left: 60rem;
 
     width:15rem;
     height: 3rem;
@@ -67,6 +70,11 @@ h1{
 
   /* cardcomponent */
 
+  .ui.cards>.card {
+    font-size: 1em;
+    height: 33rem;
+}
+
   .ui.cards > .card > .image {
     height: 250px;
     padding: 20px;
@@ -79,24 +87,37 @@ h1{
     width: auto;
   }
   .ui.cards > .card > .content > .header {
-    height: 48px;
-    overflow: hidden;
+    height: 50px;
     margin-bottom: 5px;
+    
   }
+
+ 
+.ui.card>.content>.header:not(.ui), .ui.cards>.card>.content>.header:not(.ui) {
+  font-weight: 700;
+  font-size: 1.28571429em;
+  margin-top: -0.21425em;
+  line-height: 1.28571429em;
+  margin-left: -1rem;
+  margin-bottom: 4rem;
+  padding-left: 1rem;
+}
+
   .ui.cards > .card > .content > .description {
     height: 36px;
     margin-bottom: 0px;
     overflow: hidden;
   }
-  .ui.cards > .card .meta.price {
-    margin-bottom: 5px;
-    font-size: 18px;
-    color: #333;
-    font-weight: 600;
-  }
+ 
+.ui.cards > .card .meta.price {
+  margin-bottom: 5px;
+  font-size: 20px;
+  color: #333;
+  font-weight: bold;
+}
   
   .ui.cards > .card .meta.price > a {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     color: #222;
   }
   
